--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -1347,7 +1347,7 @@ h6, .h6 {
   h5 small, .h5 small,
   h6 small, .h6 small {
     line-height: 0;
-    color: #999; }
+    color: #777; }
 
 h1, .h1 {
   font-size: 1.5rem;
@@ -1416,7 +1416,7 @@ hr {
   margin: 1.25rem auto;
   border-top: 0;
   border-right: 0;
-  border-bottom: 1px solid #999;
+  border-bottom: 1px solid #777;
   border-left: 0; }
 
 ul,
@@ -1449,7 +1449,7 @@ dl {
 blockquote {
   margin: 0 0 1rem;
   padding: 0.5625rem 1.25rem 0 1.1875rem;
-  border-left: 1px solid #999; }
+  border-left: 1px solid #777; }
   blockquote, blockquote p {
     line-height: 1.6;
     color: #8a8a8a; }
@@ -1471,7 +1471,7 @@ figure {
 
 code {
   padding: 0.125rem 0.3125rem 0.0625rem;
-  border: 1px solid #999;
+  border: 1px solid #777;
   background-color: #e6e6e6;
   font-family: Consolas, "Liberation Mono", Courier, monospace;
   font-weight: normal;
@@ -1605,7 +1605,7 @@ textarea {
   height: 2.4375rem;
   margin: 0 0 1rem;
   padding: 0.5rem;
-  border: 1px solid #999;
+  border: 1px solid #777;
   border-radius: 0;
   background-color: #fefefe;
   box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
@@ -1621,7 +1621,7 @@ textarea {
     outline: none;
     border: 1px solid #8a8a8a;
     background-color: #fefefe;
-    box-shadow: 0 0 5px #999;
+    box-shadow: 0 0 5px #777;
     transition: box-shadow 0.5s, border-color 0.25s ease-in-out; }
 
 textarea {
@@ -1631,7 +1631,7 @@ textarea {
 
 input::placeholder,
 textarea::placeholder {
-  color: #999; }
+  color: #777; }
 
 input:disabled, input[readonly],
 textarea:disabled,
@@ -1707,7 +1707,7 @@ label {
 
 .input-group-label {
   padding: 0 1rem;
-  border: 1px solid #999;
+  border: 1px solid #777;
   background: #e6e6e6;
   color: #0a0a0a;
   text-align: center;
@@ -1753,7 +1753,7 @@ legend {
 .fieldset {
   margin: 1.125rem 0;
   padding: 1.25rem;
-  border: 1px solid #999; }
+  border: 1px solid #777; }
   .fieldset legend {
     margin: 0;
     margin-left: -0.1875rem;
@@ -1764,7 +1764,7 @@ select {
   margin: 0 0 1rem;
   padding: 0.5rem;
   appearance: none;
-  border: 1px solid #999;
+  border: 1px solid #777;
   border-radius: 0;
   background-color: #fefefe;
   font-family: inherit;
@@ -1786,7 +1786,7 @@ select {
     outline: none;
     border: 1px solid #8a8a8a;
     background-color: #fefefe;
-    box-shadow: 0 0 5px #999;
+    box-shadow: 0 0 5px #777;
     transition: box-shadow 0.5s, border-color 0.25s ease-in-out; }
   select:disabled {
     background-color: #e6e6e6;
@@ -1855,11 +1855,11 @@ select {
       background-color: #006368;
       color: #fefefe; }
   .button.secondary {
-    background-color: #999;
-    color: #0a0a0a; }
+    background-color: #777;
+    color: #fefefe; }
     .button.secondary:hover, .button.secondary:focus {
-      background-color: #7a7a7a;
-      color: #0a0a0a; }
+      background-color: #5f5f5f;
+      color: #fefefe; }
   .button.success {
     background-color: #3adb76;
     color: #0a0a0a; }
@@ -1894,8 +1894,8 @@ select {
       opacity: 0.25;
       cursor: not-allowed; }
       .button.disabled.secondary, .button.disabled.secondary:hover, .button.disabled.secondary:focus, .button[disabled].secondary, .button[disabled].secondary:hover, .button[disabled].secondary:focus {
-        background-color: #999;
-        color: #0a0a0a; }
+        background-color: #777;
+        color: #fefefe; }
     .button.disabled.success, .button[disabled].success {
       opacity: 0.25;
       cursor: not-allowed; }
@@ -1937,14 +1937,14 @@ select {
           border: 1px solid #007c82;
           color: #007c82; }
     .button.hollow.secondary {
-      border: 1px solid #999;
-      color: #999; }
+      border: 1px solid #777;
+      color: #777; }
       .button.hollow.secondary:hover, .button.hollow.secondary:focus {
-        border-color: #4d4d4d;
-        color: #4d4d4d; }
+        border-color: #3c3c3c;
+        color: #3c3c3c; }
         .button.hollow.secondary:hover.disabled, .button.hollow.secondary:hover[disabled], .button.hollow.secondary:focus.disabled, .button.hollow.secondary:focus[disabled] {
-          border: 1px solid #999;
-          color: #999; }
+          border: 1px solid #777;
+          color: #777; }
     .button.hollow.success {
       border: 1px solid #3adb76;
       color: #3adb76; }
@@ -1999,14 +1999,14 @@ select {
       .button.clear.primary, .button.clear.primary.disabled, .button.clear.primary[disabled], .button.clear.primary:hover, .button.clear.primary:hover.disabled, .button.clear.primary:hover[disabled], .button.clear.primary:focus, .button.clear.primary:focus.disabled, .button.clear.primary:focus[disabled] {
         border-color: transparent; }
     .button.clear.secondary {
-      border: 1px solid #999;
-      color: #999; }
+      border: 1px solid #777;
+      color: #777; }
       .button.clear.secondary:hover, .button.clear.secondary:focus {
-        border-color: #4d4d4d;
-        color: #4d4d4d; }
+        border-color: #3c3c3c;
+        color: #3c3c3c; }
         .button.clear.secondary:hover.disabled, .button.clear.secondary:hover[disabled], .button.clear.secondary:focus.disabled, .button.clear.secondary:focus[disabled] {
-          border: 1px solid #999;
-          color: #999; }
+          border: 1px solid #777;
+          color: #777; }
       .button.clear.secondary, .button.clear.secondary.disabled, .button.clear.secondary[disabled], .button.clear.secondary:hover, .button.clear.secondary:hover.disabled, .button.clear.secondary:hover[disabled], .button.clear.secondary:focus, .button.clear.secondary:focus.disabled, .button.clear.secondary:focus[disabled] {
         border-color: transparent; }
     .button.clear.success {
@@ -2061,7 +2061,7 @@ select {
   .button.dropdown.hollow.primary::after {
     border-top-color: #007c82; }
   .button.dropdown.hollow.secondary::after {
-    border-top-color: #999; }
+    border-top-color: #777; }
   .button.dropdown.hollow.success::after {
     border-top-color: #3adb76; }
   .button.dropdown.hollow.warning::after {
@@ -2217,7 +2217,7 @@ a.button:hover, a.button:focus {
   background: #007c82;
   color: #fefefe; }
   .badge.secondary {
-    background: #999;
+    background: #777;
     color: #fefefe; }
   .badge.success {
     background: #3adb76;
@@ -2248,13 +2248,13 @@ a.button:hover, a.button:focus {
       margin: 0 0.75rem;
       opacity: 1;
       content: "/";
-      color: #999; }
+      color: #777; }
   .breadcrumbs a {
     color: #007c82; }
     .breadcrumbs a:hover {
       text-decoration: underline; }
   .breadcrumbs .disabled {
-    color: #999;
+    color: #777;
     cursor: not-allowed; }
 
 .button-group {
@@ -2321,11 +2321,11 @@ a.button:hover, a.button:focus {
       background-color: #006368;
       color: #fefefe; }
   .button-group.secondary .button {
-    background-color: #999;
-    color: #0a0a0a; }
+    background-color: #777;
+    color: #fefefe; }
     .button-group.secondary .button:hover, .button-group.secondary .button:focus {
-      background-color: #7a7a7a;
-      color: #0a0a0a; }
+      background-color: #5f5f5f;
+      color: #fefefe; }
   .button-group.success .button {
     background-color: #3adb76;
     color: #0a0a0a; }
@@ -2379,7 +2379,7 @@ a.button:hover, a.button:focus {
     background-color: #c6fcff;
     color: #222; }
   .callout.secondary {
-    background-color: #f0f0f0;
+    background-color: #ebebeb;
     color: #222; }
   .callout.success {
     background-color: #e1faea;
@@ -2596,8 +2596,8 @@ a.button:hover, a.button:focus {
     box-shadow: 0 7px 0 #fefefe, 0 14px 0 #fefefe;
     content: ''; }
   .menu-icon:hover::after {
-    background: #999;
-    box-shadow: 0 7px 0 #999, 0 14px 0 #999; }
+    background: #777;
+    box-shadow: 0 7px 0 #777, 0 14px 0 #777; }
 
 .menu-icon.dark {
   position: relative;
@@ -2718,7 +2718,7 @@ a.button:hover, a.button:focus {
   padding: 1rem;
   visibility: hidden;
   display: none;
-  border: 1px solid #999;
+  border: 1px solid #777;
   border-radius: 0;
   background-color: white;
   font-size: 1rem; }
@@ -2964,7 +2964,7 @@ a.button:hover, a.button:focus {
   z-index: 1;
   display: none;
   min-width: 200px;
-  border: 1px solid #999;
+  border: 1px solid #777;
   background: #fefefe; }
   .dropdown .is-dropdown-submenu a {
     padding: 0.7rem 1rem; }
@@ -3035,7 +3035,7 @@ a.button:hover, a.button:focus {
     background: #007c82;
     color: #0a0a0a; }
   .label.secondary {
-    background: #999;
+    background: #777;
     color: #0a0a0a; }
   .label.success {
     background: #3adb76;
@@ -3436,7 +3436,7 @@ a.button:hover, a.button:focus {
     height: 1.2rem;
     margin: 0.1rem;
     border-radius: 50%;
-    background-color: #999; }
+    background-color: #777; }
     .orbit-bullets button:hover {
       background-color: #8a8a8a; }
     .orbit-bullets button.is-active {
@@ -3477,7 +3477,7 @@ a.button:hover, a.button:focus {
     cursor: default; }
   .pagination .disabled {
     padding: 0.1875rem 0.625rem;
-    color: #999;
+    color: #777;
     cursor: not-allowed; }
     .pagination .disabled:hover {
       background: transparent; }
@@ -3502,11 +3502,11 @@ a.button:hover, a.button:focus {
   height: 1rem;
   margin-bottom: 1rem;
   border-radius: 0;
-  background-color: #999; }
+  background-color: #777; }
   .progress.primary .progress-meter {
     background-color: #007c82; }
   .progress.secondary .progress-meter {
-    background-color: #999; }
+    background-color: #777; }
   .progress.success .progress-meter {
     background-color: #3adb76; }
   .progress.warning .progress-meter {
@@ -3550,7 +3550,7 @@ a.button:hover, a.button:focus {
   display: inline-block;
   max-width: 100%;
   height: 0.5rem;
-  background-color: #999;
+  background-color: #777;
   transition: all 0.2s ease-in-out; }
   .slider-fill.is-dragging {
     transition: all 0s linear; }
@@ -3648,7 +3648,7 @@ html.is-reveal-open body {
   backface-visibility: hidden;
   display: none;
   padding: 1rem;
-  border: 1px solid #999;
+  border: 1px solid #777;
   border-radius: 0;
   background-color: #fefefe;
   position: relative;
@@ -3730,7 +3730,7 @@ html.is-reveal-open body {
   width: 4rem;
   height: 2rem;
   border-radius: 0;
-  background: #999;
+  background: #777;
   transition: all 0.25s ease-out;
   font-weight: inherit;
   color: inherit;
@@ -4283,13 +4283,13 @@ h1, h2, h3, h4, h5, h6 {
   color: #222; }
 
 h4 {
-  color: #999; }
+  color: #777; }
 
 a {
   color: #3e3e3e; }
 
 a:visited {
-  color: #666; }
+  color: #555; }
 
 a:hover,
 a:focus,
@@ -4298,7 +4298,7 @@ a:active {
 
 .text-highlight {
   color: #f8f8f8;
-  background-color: #666;
+  background-color: #555;
   padding: 0 0.2em; }
 
 .callout {
@@ -4330,13 +4330,13 @@ a.white-background, .white-background, .white-background.button, .white-backgrou
   background: white; }
 
 a.secondary-background, .secondary-background, .secondary-background.button, .secondary-background.button:hover, .secondary-background.tag {
-  background: #666; }
+  background: #555; }
 
 .tag.secondary {
-  background: #666; }
+  background: #555; }
 
 a.medium-gray-background, .medium-gray-background, .medium-gray-background.button, .medium-gray-background.button:hover, .medium-gray-background.tag {
-  background: #999; }
+  background: #777; }
 
 .label.ebi-color, .button.ebi-color, a.ebi-color, a:hover.ebi-color, .ebi-color, .ebi-color cite, .ebi-color a, .ebi-color a:hover, .ebi-color a:visited, .ebi-color h3, .ebi-color h4 {
   color: #007c82; }
@@ -4360,10 +4360,10 @@ a.medium-gray-background, .medium-gray-background, .medium-gray-background.butto
   color: white; }
 
 .label.secondary-color, .button.secondary-color, a.secondary-color, a:hover.secondary-color, .secondary-color, .secondary-color cite, .secondary-color a, .secondary-color a:hover, .secondary-color a:visited, .secondary-color h3, .secondary-color h4 {
-  color: #666; }
+  color: #555; }
 
 .label.medium-gray-color, .button.medium-gray-color, a.medium-gray-color, a:hover.medium-gray-color, .medium-gray-color, .medium-gray-color cite, .medium-gray-color a, .medium-gray-color a:hover, .medium-gray-color a:visited, .medium-gray-color h3, .medium-gray-color h4 {
-  color: #999; }
+  color: #777; }
 
 #local-title a {
   border-bottom: none; }
@@ -4423,9 +4423,9 @@ body.no-global-search .masthead-black-bar ul#global-nav.menu li.search {
       color: #007c82;
       background: #fff; }
     .masthead-black-bar .dropdown-pane.embl-dropdown a {
-      border-bottom: 1px dashed #666; }
+      border-bottom: 1px dashed #555; }
     .masthead-black-bar .dropdown-pane.embl-dropdown a:hover {
-      border-bottom: 1px solid #666; }
+      border-bottom: 1px solid #555; }
   @media screen and (max-width: 39.9375em) {
     .masthead-black-bar .dropdown-pane.embl-dropdown {
       display: none;
@@ -4777,7 +4777,7 @@ ul li.badge {
   padding-top: 0.5rem; }
 
 body .breadcrumbs a {
-  color: #999;
+  color: #777;
   border-bottom: none; }
 
 .code {
@@ -4858,11 +4858,11 @@ pre > code {
     font-size: 85%;
     list-style: none; }
   .global-footer a {
-    color: #666; }
+    color: #555; }
   .global-footer a:hover,
   .global-footer a:focus,
   .global-footer a:active {
-    color: #666;
+    color: #555;
     border-bottom: 1px dashed #e4e4e4; }
 
 .ebi-footer-meta {
@@ -5021,7 +5021,7 @@ code {
 .tabs-title > a:focus,
 .tabs-title > a[aria-selected='true'] {
   color: white;
-  background: #666; }
+  background: #555; }
 
 .related {
   background: #222;
@@ -5067,7 +5067,7 @@ code {
   .intro-unit h3 {
     padding-bottom: 1rem; }
   .intro-unit .lead {
-    color: #666;
+    color: #555;
     margin-bottom: .5rem; }
 
 a.external:after {
@@ -5113,7 +5113,7 @@ dl dt {
   font-size: 1.1rem; }
   dl dt a {
     border-bottom: none;
-    color: #666; }
+    color: #555; }
   dl dt a:hover {
     border-bottom: 1px dotted; }
 
