--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -590,7 +590,6 @@ pre > code {
   background: no-repeat 4px 50% url("../images/logos/EMBL-EBI/EMBL_EBI_Logo_white.svg");
   padding-left: 108px;
   background-size: 100px;
-  padding-right: 17px;
   height: 37px;
   line-height: 12px; }
 
@@ -1145,14 +1144,20 @@ a.more {
   a, a:visited {
     border-bottom: none; }
   #skip-to,
-  .masthead-black-bar nav,
-  .masthead nav,
   form#local-search,
   .global-footer,
   #search_ebi,
   #shortcuts,
   #ebi_search_results {
-    display: none; } }
+    display: none; }
+  body {
+    font-size: .9rem; }
+  .masthead-black-bar nav a[href]:after,
+  .masthead nav a[href]:after,
+  .masthead-inner a[href]:after {
+    content: " "; }
+  .row {
+    max-width: 100%; } }
 
 /* Clearable text inputs
    Also need JS, via: http://stackoverflow.com/questions/6258521/clear-icon-inside-input-text */
