--- a/libraries/foundation-6/css/foundation-extras.css
+++ b/libraries/foundation-6/css/foundation-extras.css
@@ -241,7 +241,7 @@ select {
   line-height: 1;
   text-align: center;
   cursor: pointer;
-  background-color: #007c82;
+  background-color: green;
   color: #fefefe; }
   [data-whatinput='mouse'] .button {
     outline: 0; }
@@ -260,31 +260,31 @@ select {
     margin-right: 0;
     margin-left: 0; }
   .button.primary {
-    background-color: #1779ba;
+    background-color: green;
     color: #fefefe; }
     .button.primary:hover, .button.primary:focus {
       background-color: #126195;
       color: #fefefe; }
   .button.secondary {
-    background-color: #767676;
+    background-color: green;
     color: #fefefe; }
     .button.secondary:hover, .button.secondary:focus {
       background-color: #5e5e5e;
       color: #fefefe; }
   .button.success {
-    background-color: #3adb76;
+    background-color: green;
     color: #0a0a0a; }
     .button.success:hover, .button.success:focus {
       background-color: #22bb5b;
       color: #0a0a0a; }
   .button.warning {
-    background-color: #ffae00;
+    background-color: green;
     color: #0a0a0a; }
     .button.warning:hover, .button.warning:focus {
       background-color: #cc8b00;
       color: #0a0a0a; }
   .button.alert {
-    background-color: #cc4b37;
+    background-color: green;
     color: #fefefe; }
     .button.alert:hover, .button.alert:focus {
       background-color: #a53b2a;
@@ -537,31 +537,31 @@ select {
       .button-group.expanded .button:first-child:nth-last-child(6):last-child, .button-group.expanded .button:first-child:nth-last-child(6):first-child:nth-last-child(6) ~ .button:last-child {
         margin-right: -6px; }
   .button-group.primary .button {
-    background-color: #007c82;
+    background-color: green;
     color: #fefefe; }
     .button-group.primary .button:hover, .button-group.primary .button:focus {
       background-color: #006368;
       color: #fefefe; }
   .button-group.secondary .button {
-    background-color: #999;
+    background-color: green;
     color: #0a0a0a; }
     .button-group.secondary .button:hover, .button-group.secondary .button:focus {
       background-color: #7a7a7a;
       color: #0a0a0a; }
   .button-group.success .button {
-    background-color: #3adb76;
+    background-color: green;
     color: #0a0a0a; }
     .button-group.success .button:hover, .button-group.success .button:focus {
       background-color: #22bb5b;
       color: #0a0a0a; }
   .button-group.warning .button {
-    background-color: #ffae00;
+    background-color: green;
     color: #0a0a0a; }
     .button-group.warning .button:hover, .button-group.warning .button:focus {
       background-color: #cc8b00;
       color: #0a0a0a; }
   .button-group.alert .button {
-    background-color: #ec5840;
+    background-color: green;
     color: #0a0a0a; }
     .button-group.alert .button:hover, .button-group.alert .button:focus {
       background-color: #da3116;
