better deal with print styles

--- a/css/ebi-css-build/_ebi_print_styles.scss
+++ b/css/ebi-css-build/_ebi_print_styles.scss
@@ -3,12 +3,19 @@
   @media print {
     a, a:visited { border-bottom: none; }
     #skip-to,
-    .masthead-black-bar nav,
-    .masthead nav,
     form#local-search,
     .global-footer,
     #search_ebi,
     #shortcuts,
     #ebi_search_results { display: none; }
+    body { font-size: .9rem; } // slightly decrease font for print
+    // don't print main navigation links
+    .masthead-black-bar nav a[href]:after,
+    .masthead nav a[href]:after,
+    .masthead-inner a[href]:after {
+      content: " ";
+    }
+    // print at full width of page
+    .row { max-width: 100%; }
   }
 }
