Add focus state

--- a/css/ebi-css-build/_ebi_masthead_styles.scss
+++ b/css/ebi-css-build/_ebi_masthead_styles.scss
@@ -265,7 +265,7 @@
     h1,
     h4,
     p,
-    a, a:hover, a:active, a:visited {
+    a, a:hover, a:focus, a:active, a:visited {
       color: #fff;
     }
     ul li a {
