--- a/css/ebi-css-build/ebi-global.scss
+++ b/css/ebi-css-build/ebi-global.scss
@@ -160,7 +160,7 @@
   }
 
   // MISC TWEAKS
-  ul.menu { font-size: .9rem; }
+  // ul.menu { font-size: .9rem; }
 
   // image tweaks
   body .thumbnail { box-shadow: none; }
