--- a/css/ebi-css-build/ebi-global.scss
+++ b/css/ebi-css-build/ebi-global.scss
@@ -13,7 +13,7 @@
 @import 'https://code.cdn.mozilla.net/fonts/fira.css';
 
 @mixin ebi-base-styles {
-  body h1, body h2, body h3, body h4, body h5 { font-weight: 600; }
+  body h1, body h2, body h3, body h4, body h5 { font-weight: 300; letter-spacing: -.5px}
 
   li { word-wrap: break-word; }
 
